@@ -1,0 +1,32 @@
+<?php
+class CollectionsOnDocFormRender extends CollectionsPlugin {
+
+    public function run() {
+        if (empty($this->scriptProperties['mode']) || $this->scriptProperties['mode'] !== 'new') {
+            return;
+        }
+
+        /** @var modResource $parent */
+        $parent = $this->scriptProperties['resource']->Parent;
+
+        if (empty($parent) || $parent->class_key != 'CollectionContainer') {
+            return;
+        }
+
+        /** @var CollectionTemplate $template */
+        $template = $this->modx->collections->getCollectionsView($parent);
+
+
+        $this->setConfig('hidemenu_default', $template->child_hide_from_menu);
+        $this->setConfig('publish_default', $template->child_published);
+        $this->setConfig('cache_default', $template->child_cacheable);
+        $this->setConfig('richtext_default', $template->child_richtext);
+        $this->setConfig('search_default', $template->child_searchable);
+    }
+
+    private function setConfig($name, $value) {
+        if ($value !== null) {
+            $this->modx->_userConfig[$name] = intval($value);
+        }
+    }
+}
